test/2-error/ann-Int-Str.ploy
main = fn <>->Int
  0:Str;
